--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 class="header">Platzinauta</h1>
+        <h1 class="header">Tomas personal website</h1>
         <img class="header" src="img/platzi-logo.png" height="100px">
         <img class="header" src="img/spacex-logo.png">
         <div class="description">
